# glucotracker

./: .gitignore  .pre-commit-config.yaml  ADR-027-self-hosted-on-ubuntu.md  AGENTS.md  CONCEPT.md  README.md  build-android-apks.cmd  errors.txt  gb-sync.txt  glucotacker mobile.html  outputs.txt  report.txt  run-backend.cmd  run-tauri.cmd  screens.jsx  task.txt  this.txt  tokens.css
backend/: .env.example  Dockerfile  alembic.ini  check_db.py  docker-compose.yml  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/glucotracker/: __init__.py  cli.py  config.py  main.py
backend/pattern_seeds/: bk.generated.yaml  bk.yaml  home.yaml  mc.yaml  rostics.generated.yaml  vit.generated.yaml  vit.manual.yaml
backend/scripts/: backfill_product_categories.py  export-openapi.sh  verify-openapi-no-glucose-leak.sh
backend/tests/: conftest.py  test_api_activity.py  test_api_auth.py  test_api_database_dedup.py  test_api_database_images.py  test_api_glucose.py  test_api_images.py  test_api_latest_reading.py  test_api_meals.py  test_api_nightscout_dashboard.py  test_api_nutrients.py  test_api_patterns_autocomplete.py  test_api_photo_capture.py  test_api_photos_gemini.py  test_api_products.py  test_api_reports.py  test_auth.py  test_categorization.py  test_db_session.py  test_domain_drafts.py  test_domain_energy.py  test_domain_migrations.py  test_domain_nutrition.py  test_episodes_api.py  test_feature_gating.py  test_gemini_quota_cooldown.py  test_gemini_routing.py  test_glucose_prediction.py  test_glucose_prediction_audit.py  test_grok_photo_client.py  test_health.py  (+18 more)
(+540 files in other folders)
